--- a/views/homepage.html
+++ b/views/homepage.html
@@ -38,6 +38,9 @@
                 <a class="nav-link" href="login">Log-In<span class="sr-only"(current)></span></a>
             </li>
             <li class="nav-item active">
+                <a class="nav-link" href="logout">Log-Out<span class="sr-only"(current)></span></a>
+            </li>
+            <li class="nav-item active">
                 <a class="nav-link" href="myprofile">Profile<span class="sr-only"(current)></span></a>
             </li>
         </ul>
