--- a/views/homepage.html
+++ b/views/homepage.html
@@ -16,9 +16,6 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="homepage">Home<span class="sr-only">(current)</span></a>
-            </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Actions
@@ -34,14 +31,18 @@
             </li>
         </ul>
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="login">Log-In<span class="sr-only"(current)></span></a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="logout">Log-Out<span class="sr-only"(current)></span></a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="myprofile">Profile<span class="sr-only"(current)></span></a>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Account
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="/myprofile">View profile</a>
+                    <a class="dropdown-item" href="/editprofile">Edit Profile</a>
+                    <a class="dropdown-item" href="#">Settings & Privacy</a>
+                    <a class="dropdown-item" href="#">Support</a>
+                    <a class="dropdown-item" href="logout">Sign out</a>
+
+                </div>
             </li>
         </ul>
     </div>
@@ -51,6 +52,8 @@
 <div style = "text-align: center">
     <img src = "../Picture/multiplelanguages.jpeg" height = "300px" width = "500px" alt = "Multiple langauges">
 </div>
+
 <p align = "center" font-size="100px">Here you can chat, communicate, and have a good time<br> with your international friends for the first time!!!</p>
+
 </body>
 </html>
