--- a/views/chats.html
+++ b/views/chats.html
@@ -48,5 +48,9 @@
     <input type="text" id="chatMsg">
     <input type="submit" value="Submit">
 </form>
+<script src="/socket.io/socket.io.js"></script>
+<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/rexeze/formatTimeStamp/src/index-cdn.js"></script>
 <script src="javascripts/chats.js"></script>
+
 </body>
