--- a/views/editprofile.html
+++ b/views/editprofile.html
@@ -93,7 +93,7 @@
     </div>
     <div class="form-group" style="float: left">
         <label>Native Languages</label>
-        <div class="dropdown bootstrap-select show-tick fit-width dropup">
+        <div class="dropdown bootstrap-select show-tick fit-width dropup" data-live-search="true" id="langExp">
             <select class="selectpicker" multiple title="Select all that apply...">
                 <option>English</option>
                 <option>Spanish</option>
@@ -108,7 +108,7 @@
     </div>
     <div class="form-group" style="float: right">
         <label>Practicing Languages</label>
-        <div class="dropdown bootstrap-select show-tick fit-width dropup">
+        <div class="dropdown bootstrap-select show-tick fit-width dropup" data-live-search="true" id="langLearn">
             <select class="selectpicker" multiple title="Select all that apply...">
                 <option>English</option>
                 <option>Spanish</option>
