--- a/views/messenger.html
+++ b/views/messenger.html
@@ -38,7 +38,7 @@
                     Account
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="/myprofile">View Profile</a>
+                    <a class="dropdown-item" href="/myprofile">My Profile</a>
                     <a class="dropdown-item" href="/editprofile">Edit Profile</a>
                     <a class="dropdown-item" href="#">Settings & Privacy</a>
                     <a class="dropdown-item" href="#">Support</a>
