--- a/public/stylesheets/chats.css
+++ b/public/stylesheets/chats.css
@@ -1,4 +1,5 @@
 .chatscontainer{
+    z-index: 0;
     /*border: 2px solid black;*/
     height: 80vh;
 }
@@ -60,4 +61,17 @@ ul{
 }
 .newSender{
     margin-top: 2px;
+}
+
+.alertBox{
+    z-index: 1;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    border: 2px solid black;
+    width: 400px;
+    height: 200px;
+    margin-top: -100px;
+    margin-left: -200px;
+    align-content: center;
 }
