--- a/views/chats.html
+++ b/views/chats.html
@@ -81,6 +81,9 @@
         </div>
     </div>
 </div>
+<div class="container alertBox">
+    TEST
+</div>
 
 
 <script src="/socket.io/socket.io.js"></script>
