--- a/views/directmessage.html
+++ b/views/directmessage.html
@@ -20,14 +20,6 @@
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Actions
                 </a>
-<!--                <div class="dropdown-menu" aria-labelledby="navbarDropdown">-->
-<!--                    <a class="dropdown-item" href="/createprofile">Create a Profile</a>-->
-<!--                    <a class="dropdown-item" href="/searchprofile">Search Profile</a>-->
-<!--                    <a class="dropdown-item" href="/socket">Socket</a>-->
-<!--                    <a class="dropdown-item" href="/messenger">Messenger (Demo)</a>-->
-<!--                    <a class="dropdown-item" href="/chats">DM Chats</a>-->
-<!--                    <a class="dropdown-item" href="/posts">Posts</a>-->
-<!--                </div>-->
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/searchprofile">Users</a>
@@ -40,7 +32,7 @@
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Account
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="/myprofile">My Profile</a>
                     <a class="dropdown-item" href="/editprofile">Edit Profile</a>
                     <a class="dropdown-item" href="#">Settings & Privacy</a>
