--- a/views/socket.html
+++ b/views/socket.html
@@ -46,7 +46,7 @@
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Account
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="/myprofile">My Profile</a>
                     <a class="dropdown-item" href="/editprofile">Edit Profile</a>
                     <a class="dropdown-item" href="#">Settings & Privacy</a>
