--- a/views/homepage.html
+++ b/views/homepage.html
@@ -80,17 +80,36 @@
         <img src="../Picture/LingoJiveLogo.png" class="img-fluid" width="200px" height="200px">
 <!--    LingoJive-->
 </h1>
+
+
+
+<div id="head" class="container">
+    <div class="row">
+        <div class="col-sm-12">
+            <div class = "one" style="...; height: 400px;text-align: center ">
+                <a href="../Picture/multiplelanguages.jpeg"><img align-text="center" height="400" src="../Picture/multiplelangs.png" ></a>
+            </div>
+        </div>
+    </div>
+</div>
 <!--<p align = "center" font-size="100px">Here you can chat, communicate, and have a good time<br> with your international friends for the first time!!!</p>-->
 <div style="border: 5px black">
     <h1 style="text-align: center; color: darkslateblue;"> A Language Exchange Application</h1>
 <h5 style="text-align: center">Here you can chat, communicate, and have a good time with your international friends for the first time</h5>
 </div>
+<!-- fini -->
+<!--
+<div style = "display: block; text-align: left">
+    <a href="../Picture/multiplelanguages.jpeg" imageanchoe="1"><img align="left" height="300" src="../Picture/multiplelanguages.jpeg" border="0"></a>
+</div>
+-->
 
-<!--- 4 boxes -->
+
+<!-- 4 boxes -->
 <div id="intro" class="container">
     <div class="row">
         <div class="col-sm-6">
-            <div class = "one" style="...;border-radius: 0px; border:5px solid black; align: 'center'; float: right; height: 105px;width: 500px;margin: 20px 0px 0px 0px ">
+            <div class = "one" style="...;border-radius: 0px; border:5px solid black; align: 'center'; float: left; height: 105px;width: 500px;margin: 20px 0px 0px 0px ">
                 <h3 style="text-align: center; color: darkslateblue;">Connect Internationally</h3>
                 <h5 style="text-align: center">Meet new people from different countries through language!</h5>
             </div>
@@ -104,7 +123,7 @@
     </div>
     <div class="row">
         <div class="col-sm-6">
-            <div class = "three"style="...;border-radius: 0px; border:5px solid black; align: 'center'; float: right; height: 105px;width: 500px;margin: 20px 0px 0px 0px ;">
+            <div class = "three"style="...;border-radius: 0px; border:5px solid black; align: 'center'; float: left; height: 105px;width: 500px;margin: 20px 0px 0px 0px ;">
                 <h3 style="text-align: center; color: darkslateblue;">Timed Language Switches</h3>
                 <h5 style="text-align: center">Switch languages spoken with another user after a period of time!</h5>
             </div>
