--- a/views/room.html
+++ b/views/room.html
@@ -4,13 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script>
-        const ROOM_ID = "<%= roomId %>"
-    </script>
     <script defer src="https://unpkg.com/peerjs@1.2.0/dist/peerjs.min.js"></script>
-<!--    <script defer src="https://unpkg.com/peerjs@1.3.2/dist/peerjs.min.js.map"></script>-->
-    <script src="/socket.io/socket.io.js" defer></script>
-    <script src="/javascripts/room.js" defer></script>
+    <script defer src="/socket.io/socket.io.js"></script>
+    <script defer src="/javascripts/room.js"></script>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -18,44 +14,13 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
     <title>Document</title>
-    <style>
-        #video-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, 300px);
-            grid-auto-rows: 300px;
-            /*position: absolute;*/
-            /*left: 50%;*/
-            /*margin-left: -300px;*/
-            /*top: 50%;*/
-            /*margin-top: -150px;*/
-        }
-
-        video {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-
-        .rateUser{
-            display: none;
-            z-index: 1;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            border: 2px solid black;
-            width: 400px;
-            height: 200px;
-            margin-top: -100px;
-            margin-left: -200px;
-            align-content: center;
-            background: white;
-        }
-    </style>
-    <script>
-        myusername = '<%= myusername %>'
-    </script>
+    <link rel="stylesheet" href="../stylesheets/room.css">
 </head>
 <body>
+<script>
+    const ROOM_ID = '<%= roomId %>'
+    const myusername = '<%= myusername %>'
+</script>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="/">LingoJive</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -63,19 +28,6 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <!--            <li class="nav-item dropdown">-->
-            <!--                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
-            <!--                    Actions-->
-            <!--                </a>-->
-            <!--                <div class="dropdown-menu" aria-labelledby="navbarDropdown">-->
-            <!--                    <a class="dropdown-item" href="/createprofile">Create a Profile</a>-->
-            <!--                    <a class="dropdown-item" href="/searchprofile">Search Profile</a>-->
-            <!--                    <a class="dropdown-item" href="/socket">Socket</a>-->
-            <!--                    <a class="dropdown-item" href="/messenger">Messenger (Demo)</a>-->
-            <!--                    <a class="dropdown-item" href="/chats">DM Chats</a>-->
-            <!--                    <a class="dropdown-item" href="/posts">Posts</a>-->
-            <!--                </div>-->
-            <!--            </li>-->
             <li class="nav-item">
                 <a class="nav-link" href="/searchprofile">
                     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-people" viewBox="0 0 16 16">
@@ -102,7 +54,7 @@
         <ul class="navbar-nav ml-auto">
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <%= username %>
+                    <%= myusername %>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="/myprofile">My Profile</a>
@@ -119,11 +71,6 @@
 <button id="hangUpButton">End Call</button>
 <div class="container rateUser">
     Rate User!
-<!--    overallFluency: [Number],-->
-<!--    pronunciation: [Number],-->
-<!--    conversationalAbility: [Number],-->
-<!--    listening: [Number],-->
-<!--    speaking: [Number]-->
     <label for="overallFluency">Overall Fluency</label>
     <select name="overallFluency" id="overallFluency">
         <option value="1">1</option>
@@ -166,7 +113,5 @@
     </select>
     <button id="submitRating">Submit</button>
 </div>
-<!--<script src="/socket.io/socket.io.js"></script>-->
-<!--<script src="/javascripts/room.js"></script>-->
 </body>
 </html>
