--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -16,7 +16,7 @@ h1{
 }
 
 #button_badge {
-    background-color: #fa3e3e;
+    background-color: #EE973A;
     border-radius: 2px;
     color: white;
 
