--- a/public/stylesheets/searchprofile.css
+++ b/public/stylesheets/searchprofile.css
@@ -1,5 +1,10 @@
+.btn-search{
+    background-color: #EE973A !important;
+    color: #4B4B69 !important;
+}
+
 #button_badge {
-    background-color: #fa3e3e;
+    background-color: #EE973A;
     border-radius: 2px;
     color: white;
     display: none;
