--- a/views/searchprofile.html
+++ b/views/searchprofile.html
@@ -98,13 +98,13 @@
     <div class="input-group">
         <input type="text" name="firstname" id="firstname" class="form-control"
                placeholder="Name">
-        <button class="btn btn-success" id="btnLoadUsersByName">Search</button>
+        <button class="btn btn-search" id="btnLoadUsersByName">Search</button>
     </div>
     <label style="padding-top: 10px" for="Username">Search by Username:</label>
     <div class="input-group">
         <input type="text" name="Username" id="Username" class="form-control"
                placeholder="Username">
-        <button class="btn btn-success" id="btnLoadUsersByUsername">Search</button>
+        <button class="btn btn-search" id="btnLoadUsersByUsername">Search</button>
     </div>
     <p style="padding-top: 10px">Search by Language:</p>
     <div class="input-group">
@@ -124,8 +124,7 @@
         </div>
     </div>
     <div class="input-group">
-
-        <label for="languageLearning">Language being Learned</label>
+        <label for="languageLearning">Learning Language</label>
         <div class="dropdown bootstrap-select show-tick fit-width dropup" data-live-search="true">
 
             <select class="selectpicker" title="Select one" id="languageLearning">
@@ -139,8 +138,8 @@
                 <option>Dutch</option>
                 <option>Mandarin</option>
             </select>
+            <button class="btn btn-search" id="btnLoadUsersByLanguage">Search</button>
         </div>
-        <button class="btn btn-success" id="btnLoadUsersByLanguage">Search</button>
     </div>
 </div>
 <div style="padding-top: 10px" class="container">
